# Ordo-Maledictum-Promptorum

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CICD_SETUP_SUMMARY.md  CI_FIXES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  REDTEAM_TEST_RESULTS.md  REPORTED_ISSUE.md  TEST_COVERAGE_SUMMARY.md  VOTING_MODULE_SUMMARY.md  WorkInProgress.md  deny.toml  docker-compose.yml  run_local.sh  setup.sh
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  WORKFLOWS_QUICK_REFERENCE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml  security.yml
api/: API_DOCUMENTATION.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
api/src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  state.rs  types.rs
api/src/handlers/: approval.rs  health.rs  ledger.rs  mod.rs  process.rs
config/: default.toml  parsers.example.json  provider_config.json
core/comparator/: Cargo.toml  README.md
core/comparator/examples/: basic_usage.rs
core/comparator/src/: lib.rs
core/intent_generator/: Cargo.toml  README.md
core/intent_generator/src/: lib.rs
core/ledger/: Cargo.toml  README.md
core/ledger/migrations/: 20250101000001_init.sql
core/ledger/src/: cache_helper.rs  lib.rs
core/malicious_detector/: Cargo.toml
core/malicious_detector/src/: lib.rs
core/notifications/: Cargo.toml  README.md  notifications.example.toml
core/notifications/src/: batcher.rs  config.rs  error.rs  lib.rs  service.rs  types.rs
core/parsers/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
core/parsers/examples/: basic_usage.rs
core/parsers/src/: cache_helper.rs  claude.rs  config.rs  deepseek.rs  deterministic.rs  ensemble.rs  lib.rs  ollama.rs  openai.rs  types.rs
core/penitent_cogitators/src/: cache_helper.rs  chatgpt.rs  claude.rs  config.rs  deepseek.rs  diagnostics.rs  ensemble.rs  health_monitor.rs  lib.rs
core/processing_engine/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
core/processing_engine/examples/: basic_usage.rs
core/processing_engine/src/: lib.rs
core/redis_cache/: Cargo.toml
core/redis_cache/src/: lib.rs
core/schema/: Cargo.toml
core/schema/src/: cache.rs  generator_types.rs  lib.rs
core/supervision/: Cargo.toml
core/supervision/src/: error.rs  lib.rs  models.rs  notifications.rs  service.rs  storage.rs
core/voting/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
core/voting/examples/: scenarios.rs  voting_scenarios.rs
core/voting/src/: lib.rs
docs/: API_COST_OPTIMIZATION_IMPLEMENTATION.md  DEVELOPMENT.md  MODULE_GUIDE.md  PROJECT_SUMMARY.txt  SECURITY.md  TEST_COVERAGE.md
frontend/: BUILD_INSTRUCTIONS.md  IMPLEMENTATION.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  IntentVisualization.tsx  Layout.tsx  Loading.tsx  index.ts
frontend/src/pages/: ApprovalReview.tsx  AuditLogs.tsx  QueryInterface.tsx
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
setup/: rebuild_api.bat  rebuild_api.sh  start_postgres.bat  start_postgres.sh
tests/: README.md  TEST_SUMMARY.md  integration.rs  redteam.rs  regression.rs  test_helpers.rs
tests/common/: mod.rs
tests/e2e/: run_e2e_test.py
tests/fixtures/: mock_llm_responses.json  provider_configs.json  user_inputs.json
tests/integration/: api_integration_test.rs  database_integration_test.rs  end_to_end_test.rs  llm_integration_test.rs  mod.rs
tests/redteam/: README.md  b2b_consulting_attack.rs  customer_service_attack.rs  mod.rs  phone_tree_attack.rs
tests/redteam/analysis/: mod.rs
tests/redteam/attacks/: mod.rs
tests/redteam/attacks/direct_injection/: dual_intention.rs  hashjack.rs  semantic_substitution.rs
tests/redteam/benchmarks/: metrics.rs  mod.rs
tests/redteam/payloads/: direct_injection.txt
tests/redteam/scenarios/: mod.rs
tests/regression/: known_issues_test.rs  mod.rs  performance_regression_test.rs  security_regression_test.rs
