[workspace]
resolver = "2"
members = [
    "core/schema",
    "core/malicious_detector",
    "core/penitent_cogitators",
    "core/parsers",
    "core/voting",
    "core/comparator",
    "core/intent_generator",
    "core/processing_engine",
    "core/ledger",
    "core/supervision",
    "core/notifications",
    "core/redis_cache",
    "api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ordo Maledictum Promptorum Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Web framework
axum = { version = "0.8", features = ["macros"] }
# HTTP client
reqwest = { version = "0.11", features = ["json"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
# Validation
validator = { version = "0.18", features = ["derive"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Time
chrono = { version = "0.4", features = ["serde"] }
# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }
# Config
config = "0.14"
# Email
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
# Regex
regex = "1.10"
# Tower for middleware
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
# JSON Schema
jsonschema = "0.18"
# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
