[package]
name = "intent-comparator"
version.workspace = true
edition.workspace = true

[dependencies]
intent-schema = { path = "../schema" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
