[package]
name = "intent-generator"
version.workspace = true
edition.workspace = true

[dependencies]
intent-schema = { path = "../schema" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio.workspace = true
validator.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
