[package]
name = "intent-ledger"
version.workspace = true
edition.workspace = true

[dependencies]
intent-schema = { path = "../schema" }
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2 = "0.10"
