[package]
name = "intent-parsers"
version.workspace = true
edition.workspace = true

[dependencies]
intent-schema = { path = "../schema" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
regex.workspace = true
async-trait = "0.1"
chrono.workspace = true
uuid.workspace = true
md5 = "0.7"

[dev-dependencies]
tracing-subscriber.workspace = true

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
