[package]
name = "intent-parsers"
version.workspace = true
edition.workspace = true

[dependencies]
intent-schema = { path = "../schema" }
intent-redis-cache = { path = "../redis_cache", optional = true }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
regex.workspace = true
async-trait = "0.1"
chrono.workspace = true
uuid.workspace = true
md5 = "0.7"
sha2 = "0.10"

[features]
default = []
caching = ["intent-redis-cache"]

[dev-dependencies]
tracing-subscriber.workspace = true
malicious-detector = { path = "../malicious_detector" }
intent-voting = { path = "../voting" }
intent-comparator = { path = "../comparator" }
dotenv = "0.15"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
