[package]
name = "processing-engine"
version.workspace = true
edition.workspace = true

[dependencies]
intent-schema = { path = "../schema" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
