[package]
name = "intent-redis-cache"
version.workspace = true
edition.workspace = true

[dependencies]
intent-schema = { path = "../schema" }
redis.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait = "0.1"
